# whisper-dictation

./: .gitignore  FAQ.md  LICENSE  README.md  pyproject.toml  requirements.txt  rewrite_prompt.txt  run.bat  whisper-dictation.py
