[project]
name = "whisper-dictation"
version = "1.0.0"
description = "Real-time speech-to-text dictation for Windows using faster-whisper with CUDA"
authors = [{name = "Jose Lopez", email = "jmslay.public@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.13"
dependencies = [
    "faster-whisper>=1.1.0",
    "pyaudio>=0.2.13",
    "pynput>=1.7.6",
    "pystray>=0.2.8",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "nvidia-cublas-cu12>=12.4.2",
    "nvidia-cudnn-cu12>=9.1.0",
]

[project.urls]
Homepage = "https://github.com/jmslay/whisper-dictation"
